.provarCaches/00D410000011HE0EAM/objects/rstk__ictrstsup__c.object
<CustomObject>
    <description>ictrstsup__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_acctcd__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>acctcd_ui</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Inter-Site Supply</relationshipLabel>
        <relationshipName>ICTRSTSUPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_actshipdte__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>ACTSHIPDTE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_dckdte__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>DCKDTE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Inter-Site Supply</relationshipLabel>
        <relationshipName>divictrstsups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_dmdsite__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>dmdsite_ui</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Inter-Site Supply (dmdsite_ui)</relationshipLabel>
        <relationshipName>ICTRSTSUPs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_duedte__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>DUEDTE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_invuom__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>invuom_ui</label>
        <referenceTo>rstk__syuom__c</referenceTo>
        <relationshipLabel>Inter-Site Supply</relationshipLabel>
        <relationshipName>ictrstsups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Inter-Site Supply</relationshipLabel>
        <relationshipName>Inter_Site_Supply1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_itemrev__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>itemrev_ui</label>
        <referenceTo>rstk__peitemrev__c</referenceTo>
        <relationshipLabel>Inter-Site Supply</relationshipLabel>
        <relationshipName>Inter_Site_Supply</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_ordno__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>ORDNO</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_ordsts__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>ORDSTS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_proj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>proj_ui</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Inter-Site Supply</relationshipLabel>
        <relationshipName>ICTRSTSUPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_qtyacc__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>QTYACC</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_qtyoutstdg__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>QTYOUTSTDG</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_qtyrcvd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>QTYRCVD</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_qtyreq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>QTYREQ</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_qtyscrap__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>QTYSCRAP</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_qtyship__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>QTYSHIP</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_respinv__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>respinv_ui</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Inter-Site Supply</relationshipLabel>
        <relationshipName>ICTRSTSUPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_schedfirmdte__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>SCHEDFIRMDTE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_schedshipdte__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>SCHEDSHIPDTE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>site_ui</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Inter-Site Supply (site_ui)</relationshipLabel>
        <relationshipName>ICTRSTSUPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_stsdte__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>STSDTE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__ictrstsup_wbs__c</fullName>
        <inlineHelpText>NOT CURRENTLY USED - ADD HELP LATER AS NECESSARY</inlineHelpText>
        <label>WBS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Inter-Site Supply</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ICTRSTSUP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inter-Site Supply</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>